# web-test-python

./: .gitignore  README.md  install.sh  requirements.txt  setupenv.sh  test.py
project/: MANIFEST.in  report.html  setup.cfg
project/project/: conftest.py  report.html  runner.py
project/project/config/: __init__.py  constants.py  logger.py  page_factory.py  remote.py  session_info.py
project/project/config/actions/: __init__.py  common_actions.py
project/project/config/actions/web/: web_actions.py
project/project/config/config_file/: capabilities.json
project/project/config/plugins/: hooks.py
project/project/config/utils/: utils.py
project/project/mobile/android/mappings/: landing.py  login.py
project/project/tests/mobile/: conftest.py
project/project/tests/web/: conftest.py
project/project/web/mappings/: selenium_mapping.py
project/project/web/pages/: selenium_home.py
tests/: conftest.py  report.html  runner.py  setup.cfg
tests/config/: __init__.py  page_factory.py  remote.py
tests/features/: open_screen.feature
tests/mappings/: selenium_mapping.py
tests/pages/: __init__.py  page_factory.py  selenium_actions.py  selenium_home.py
tests/steps/: test_open_screen.py
tests/tests/: conftest.py  runner.py
tests/tests/config/: __init__.py  constants.py  hooks.py  logger.py  remote.py
tests/tests/config/config_file/: capabilities.json
tests/tests/config/plugins/: hooks.py
tests/tests/config/utils/: utils.py
tests/tests/mappings/: selenium_mapping.py
tests/tests/pages/: selenium_home.py
(+7 files in other folders)
