[metadata]
name = pytest-web
description = Python package framework from testing
long_description = To check the setup.cfg documentation, access the user guide here: https://setuptools.pypa.io/en/latest/userguide/index.html
url =
author = Dourado
author_email = douradofadiogo@gmail.com
version = 0.1
classifiers =
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Pytest
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
keywords = test, frontend, e2e, automation, pytest

[options]
packages = find:
install_requires =
    pytest==6.2.4
    pytest-html==3.1.1
    selenium==4.1.0
    pytest-bdd==4.1.0
    webdriver-manager==3.3.0
    filelock == 3.7.1
    xmltodict == 0.12.0

python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    run-test-suite=runner:main
